# RTYPE

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  _activable_8hpp.html  _activable_8hpp__dep__incl.map  _activable_8hpp__dep__incl.md5  _activable_8hpp__incl.map  _activable_8hpp__incl.md5  _activable_8hpp_source.html  _animate_8hpp.html  _animate_8hpp.js  _animate_8hpp__dep__incl.map  _animate_8hpp__dep__incl.md5  _animate_8hpp__incl.map  _animate_8hpp__incl.md5  _animate_8hpp_source.html  _animated_8hpp.html  _animated_8hpp__dep__incl.map  _animated_8hpp__dep__incl.md5  _animated_8hpp__incl.map  _animated_8hpp__incl.md5  _animated_8hpp_source.html  _animation_8cpp.html  _animation_8cpp__incl.map  _animation_8cpp__incl.md5  _animation_8hpp.html  _animation_8hpp__dep__incl.map  _animation_8hpp__dep__incl.md5  _animation_8hpp__incl.map  _animation_8hpp__incl.md5  _animation_8hpp_source.html  _asset_loader_8cpp.html  (+1178 more)
.github/workflows/: build_debug.yml  ci.yml  clang-format.yml  lint.yml  lints.yml  mirroring.yml  publish_release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: config.ini
cmake/: CompilerFlags.cmake  DetectCompiler.cmake
dependencies/: CMakeLists.txt
docs/: header.html
misc/windows/: wix_licence.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+106 more)
src/: CMakeLists.txt  main.cpp
src/client/: Animation.cpp  Animation.hpp  AssetLoader.cpp  AssetLoader.hpp  AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  GameWorld.cpp  GameWorld.hpp  GetWorld.cpp  GetWorld.hpp  Menu.cpp  Menu.hpp  MenuWorld.cpp  MenuWorld.hpp  NetworkClient.cpp  NetworkClient.cpp.bak  NetworkClient.hpp  NetworkClient.hpp.bak  New_Net_Client.cpp  New_Net_Client.hpp  New_Network_Client.hpp  SoundBox.cpp  SoundBox.hpp  entrypoint.cpp
src/components/: CMakeLists.txt  Position.hpp
src/demo/: CMakeLists.txt  Demo.cpp
src/ecs/: AssetManager.hpp  CMakeLists.txt  Constant.hpp  EnemyFactory.cpp  EnemyFactory.hpp  Engine.hpp  Entity.hpp  Event.hpp  LockedQueue.hpp  README.md  Registry.hpp  SparseArray.hpp  World.hpp  WorldManager.cpp  WorldManager.hpp  ecs.cpp  ecs.hpp  sparseArray.hpp
src/ecs/components/: Bullet.hpp  CMakeLists.txt  ClientSocket.hpp  Controllable.hpp  Damage.hpp  Dead.hpp  Direction.hpp  Drawable.hpp  EnemyAI.cpp  EnemyAI.hpp  EntityAI.cpp  EntityAI.hpp  EntityLife.hpp  EntityType.hpp  Faction.hpp  Health.hpp  InputMoveDown.hpp  InputMoveLeft.hpp  InputMoveRight.hpp  InputMoveUp.hpp  MovementAI.cpp  MovementAI.hpp  Network.hpp  NetworkId.hpp  Position.hpp  Projectile.hpp  Score.hpp  Shootable.hpp  Size.hpp  Velocity.hpp  Weapon.hpp
src/ecs/components/client/: Activable.hpp  Animated.hpp  CMakeLists.txt  Connection.hpp  Controllable.hpp  Drawable.hpp  HitBox.hpp  Hitbox.hpp  Parallax.hpp  Text.hpp
src/ecs/components/server/: AttackAI.cpp  AttackAI.hpp  CMakeLists.txt  EnemyAI.hpp  FollowEntity.hpp  Projectile.hpp  ServerId.hpp
src/ecs/systems/: CMakeLists.txt  DeathUpdate.hpp  Draw.hpp  HandleSFMLEvents.hpp  HandleSFMLKeys.hpp  HandleSFMLMovements.hpp  ManageClientEvents.hpp  ManageEvents.hpp  Movement.hpp  PositionLogger.hpp  PositionUpdate.hpp  ProjectileCollision.hpp  PushClientMovement.hpp  RunAI.hpp  RunMovementAI.hpp  ServerPush.hpp  ShowHitBox.hpp
src/ecs/systems/client/: Animate.hpp  Buttons.hpp  CMakeLists.txt  Draw.hpp  ExecuteOnce.hpp  HandleIncomingMessages.hpp  HandleParallaxBounds.hpp  HandleSFMLEvents.hpp  HandleSFMLKeys.hpp  HealthBar.hpp  KeepAlive.hpp  MenuSelect.hpp  PeriodicPing.hpp  Score.hpp  ScoreUpdate.hpp  SendDirection.hpp
src/ecs/systems/server/: DeathUpdate.hpp  FollowEntitySystem.hpp  HandleIncomingMessage.hpp  HealthUpdate.hpp  KeepAlive.hpp  PeriodicPing.hpp  PlayerHealthUpdate.hpp  PositionUpdate.hpp  ProjectileCollision.hpp  RunAttackAI.hpp  Waves.hpp
src/ecs/utils/: CMakeLists.txt  Window.hpp
src/game/: CMakeLists.txt  Demo.cpp
src/lobby/: CMakeLists.txt  HubServer.hpp  entrypoint.cpp
src/server/: CMakeLists.txt  IServer.hpp  LockedQueue.hpp  Room.hpp  Server.cpp  Server.hpp  entrypoint.cpp
src/utils/: CMakeLists.txt  Constant.hpp  InputMap.cpp  InputMap.hpp  Window.cpp  Window.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/ecs/: CMakeLists.txt
tests/unit_tests/ecs/registry/: CMakeLists.txt  registryTests.cpp
tests/unit_tests/ecs/sparse_array/: CMakeLists.txt  sparseArrayTests.cpp
tests/unit_tests/ecs/systems/: CMakeLists.txt  systemsTests.cpp
tests/unittests/: CMakeLists.txt
